--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
     "angular-route": "^1.3.0",
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
-    "angular-material": "~0.8.3"
+    "angular-material": "~0.8.3",
+    "angular-translate": "~2.6.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
